<resources>
    <string name="app_name">ホイッスル</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name_hint_text">名前</string>
    <string name="search_member_hint_text">メンバー検索</string>
    <string name="search_default_hint_text">デフォルト検索</string>
    <string name="title_activity_login">Sign in</string>


    <string name="title_now">今から飲む</string>
    <string name="title_ing">進行中</string>
    <string name="title_home">ホーム</string>
    <string name="title_group">グループ</string>
    <string name="title_default">デフォルト設定</string>
    <string name="title_activity_default_setting">DefaultSetting</string>
    <string name="title">タイトル</string>
    <string name="title_bottom_main">メイン</string>
    <string name="title_bottom_budget">予算</string>
    <string name="title_bottom_reservation">予約</string>
    <string name="title_bottom_member">招待</string>
    <string name="title_bottom_time">時間設定</string>
    <string name="shop_name">店名</string>
    <string name="location_name">店位置</string>
    <string name="time">時間</string>
    <string name="count_member">人数</string>
    <string name="event_name">イベント名</string>

    <string name="next">Next</string>
    <string name="default_name">デフォルト名</string>
    <string name="username">ユーザーネーム</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_group">EditGroupActivity</string>
    <string name="title_activity_edit_defaultSetting">EditDefaultSettingActivity</string>
    <string name="cross">×</string>
    <string name="title_activity_gurunavi_maps">Map</string>
    <string name="invite_end">招待を打ち切る</string>
    <string name="invite_send">招待を送信する</string>
    <string name="shop_search_keyword">キーワード</string>
    <string name="shop_search_genre">ジャンル</string>
    <string name="label_search_result">検索結果</string>
    <string name="label_search_advanced">詳細設定</string>

    <string-array name="unit_rounding">
        <item>1</item>
        <item>10</item>
        <item>100</item>
        <item>1000</item>
        <item>10000</item>
    </string-array>

    <string name="shortcut_short_label_guest">招待イベント一覧</string>
    <string name="shortcut_long_label_guest">招待されているイベントの一覧</string>
    <string name="shortcut_disabled_message_guest">無効</string>
</resources>
