<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_ing"
        android:icon="@drawable/ic_work"
        android:title="メンバー設定" />
    <!--<item-->
        <!--android:id="@+id/navigation_member"-->
        <!--android:icon="@drawable/ic_menu_gallery"-->
        <!--android:title="メンバー設定"-->
        <!--/>-->

    <item
        android:id="@+id/navigation_now"
        android:icon="@drawable/ic_now"
        android:title="@string/title_now" />
    <item
        android:id="@+id/navigation_group"
        android:icon="@drawable/ic_group"
        android:title="@string/title_group" />
    <item
        android:id="@+id/navigation_default"
        android:icon="@drawable/ic_default"
        android:title="@string/title_default" />

</menu>
